# post-umbrella

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  check_envs.sql  index.html  package-lock.json  package.json  playwright.config.ts  register-deeplink.reg  skills-lock.json  tauri-updater.key.pub  vercel.json  vite.config.js  vitest.config.js
.claude/: CLAUDE.md  plan.md  settings.local.json
acceptance/: binary-raw-hex-toggle.md  capture-set-cookie.md  cookie-header-injection.md  cookie-jar-storage.md  cookie-manager.md  cookie-ui-polish.md  cookies-tab-response-viewer.md  curl-auth-inheritance-and-variables.md  curl-cookie-support.md  error-boundary.md  html-preview.md  image-response-preview.md  import-roundtrip-repair.md  multi-format-import-picker.md  openapi-import.md  path-var-insert-fix.md  path-variables.md  pdf-response-preview.md  response-download.md  response-viewer-expand-collapse-all.md  response-viewer-search-json.md  sidebar-expand-collapse-with-search.md  tab-context-menu.md  tauri-shell.md
docs/: workspace-feature-plan.md
e2e/: admin.spec.ts  advanced-operations.spec.ts  auth.setup.ts  binary-toggle.spec.ts  bottom-bar.spec.ts  collection-auth.spec.ts  collection-variables.spec.ts  collection.spec.ts  cookie-manager.spec.ts  cookies-tab.spec.ts  curl-panel.spec.ts  environment.spec.ts  error-boundary.spec.ts  example.spec.ts  html-preview.spec.ts  (+19 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/window/: linux.rs  macos.rs  mod.rs  windows.rs
(+259 files in other folders)
