[package]
name = "post-umbrella"
version = "0.1.9"
description = "A self-hosted API testing tool"
authors = ["emonster"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-window-state = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
reqwest = { version = "0.12", features = ["rustls-tls"] }
tauri-plugin-dialog = "2.6.0"
base64 = "0.22"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
